--- a/angular-praticas/src/app/diretivas/diretivas.component.html
+++ b/angular-praticas/src/app/diretivas/diretivas.component.html
@@ -7,5 +7,6 @@
     <app-diretiva-switch></app-diretiva-switch>
     <app-diretiva-ngfor></app-diretiva-ngfor>
     <app-diretiva-ngclass></app-diretiva-ngclass>
+    <app-diretiva-ngstyle></app-diretiva-ngstyle>
   </div>
 </div>
