--- a/angular-praticas/src/app/diretivas/diretivas.component.html
+++ b/angular-praticas/src/app/diretivas/diretivas.component.html
@@ -8,5 +8,6 @@
     <app-diretiva-ngfor></app-diretiva-ngfor>
     <app-diretiva-ngclass></app-diretiva-ngclass>
     <app-diretiva-ngstyle></app-diretiva-ngstyle>
+    <app-operador-elvis></app-operador-elvis>
   </div>
 </div>
