exercicio sobre ng-content

--- a/angular-praticas/src/app/diretivas/diretivas.component.html
+++ b/angular-praticas/src/app/diretivas/diretivas.component.html
@@ -9,5 +9,6 @@
     <app-diretiva-ngclass></app-diretiva-ngclass>
     <app-diretiva-ngstyle></app-diretiva-ngstyle>
     <app-operador-elvis></app-operador-elvis>
+    <app-ng-content></app-ng-content>
   </div>
 </div>
