terminando exercicios sobre elementRef e renederer

--- a/angular-praticas/src/app/diretivas/diretivas.component.html
+++ b/angular-praticas/src/app/diretivas/diretivas.component.html
@@ -10,5 +10,6 @@
     <app-diretiva-ngstyle></app-diretiva-ngstyle>
     <app-operador-elvis></app-operador-elvis>
     <app-ng-content></app-ng-content>
+    <app-elementref-renderer></app-elementref-renderer>
   </div>
 </div>
