terminei exercicios sobre elementRef e renderer

--- a/angular-praticas/src/app/diretivas/elementref-renderer/elementref-renderer.component.css
+++ b/angular-praticas/src/app/diretivas/elementref-renderer/elementref-renderer.component.css
@@ -1,3 +1,7 @@
 .destaque {
   @apply text-white bg-[#4caf50] rounded
 }
+
+.novo-item {
+  @apply bg-grayCustom-100 rounded w-full h-12 flex justify-center items-center overflow-hidden mb-1
+}
