--- a/angular-praticas/src/app/diretivas/elementref-renderer/elementref-renderer.component.html
+++ b/angular-praticas/src/app/diretivas/elementref-renderer/elementref-renderer.component.html
@@ -31,8 +31,31 @@
         </div>
       </div>
 
-      <div>
-
+      <div class="flex flex-col items-start gap-3 xl:items-center md:gap-5 lg:gap-12 xl:w-96 md:w-full">
+        <div class="w-full 2xl:w-96">
+          <h4 class="text-lg font-medium lg:text-xl">
+            Criar Elemento no DOM
+          </h4>
+          <div class="flex flex-col w-full p-1 border-2 border-solid rounded-lg shadow-md border-grayCustom-200">
+            <p id="container"></p>
+            <button (click)="adicionarElemento()"
+            class="w-full h-12 text-lg font-medium transition-all duration-150 rounded bg-grayCustom-100 hover:bg-grayCustom-200 active:bg-grayCustom-300">
+              Adicionar Elemento
+            </button>
+          </div>
+        </div>
+        <div class="w-full 2xl:w-96">
+          <h4 class="text-lg font-medium lg:text-xl">
+            Alterando atributo
+          </h4>
+          <div class="flex flex-col w-full gap-1 p-1 border-2 border-solid rounded-lg shadow-md border-grayCustom-200">
+            <button (click)="habilitarBotao()"
+            class="w-full h-12 text-lg font-medium transition-all duration-150 rounded bg-grayCustom-100 hover:bg-grayCustom-200 active:bg-grayCustom-300">
+              habilitar botao
+            </button>
+            <button disabled class="w-full h-12 text-lg transition-all duration-150 rounded bg-grayCustom-100">Eu estou desabilitado</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
